// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute convert api should return success 1`] = `
Object {
  "data": Object {
    "result": 1785.0181286441143,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 1785.0181286441143,
  "statusCode": 200,
}
`;

exports[`execute latest api returns success with batched quote symbols 1`] = `
Object {
  "data": Object {
    "base": "BTC",
    "date": "2022-01-12",
    "rates": Object {
      "USD": 42968.36778447169,
      "XAU": 0.04228229144046888,
    },
    "results": Array [
      Array [
        "2ZgJBx2Rs86dhkQN/BET4ojSkTU=",
        Object {
          "data": Object {
            "base": "BTC",
            "endpoint": "latest",
            "quote": "USD",
          },
          "debug": Object {
            "batchCacheKey": "2E1RbkLbQOXUVtGI1E2+n/etEO8=",
            "batchChildrenCacheKeys": Array [
              Array [
                "2ZgJBx2Rs86dhkQN/BET4ojSkTU=",
                Object {
                  "data": Object {
                    "base": "BTC",
                    "endpoint": "latest",
                    "quote": "USD",
                  },
                  "id": "1",
                },
              ],
            ],
            "cacheKey": "Io9CE5GgK3Zu72UltbQi09+PByY=",
          },
          "id": "1",
          "rateLimitMaxAge": 176470588,
        },
        42968.36778447169,
      ],
      Array [
        "jn7Ay27+0XZwS3+kIquAQibbEtg=",
        Object {
          "data": Object {
            "base": "BTC",
            "endpoint": "latest",
            "quote": "XAU",
          },
          "debug": Object {
            "batchCacheKey": "2E1RbkLbQOXUVtGI1E2+n/etEO8=",
            "batchChildrenCacheKeys": Array [
              Array [
                "2ZgJBx2Rs86dhkQN/BET4ojSkTU=",
                Object {
                  "data": Object {
                    "base": "BTC",
                    "endpoint": "latest",
                    "quote": "USD",
                  },
                  "id": "1",
                },
              ],
            ],
            "cacheKey": "Io9CE5GgK3Zu72UltbQi09+PByY=",
          },
          "id": "1",
          "rateLimitMaxAge": 176470588,
        },
        0.04228229144046888,
      ],
    ],
    "success": true,
    "timestamp": 1641990180,
    "unit": "per ounce",
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "statusCode": 200,
}
`;

exports[`execute latest api returns success with single base/quote pair 1`] = `
Object {
  "data": Object {
    "result": 1817.0552439305814,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 1817.0552439305814,
  "statusCode": 200,
}
`;

exports[`execute latest api should succeed with batched base symbols (inverted quote) 1`] = `
Object {
  "error": Object {
    "feedID": "[GBP|XAU]/USD",
    "message": "Nock: No match for request {
  \\"method\\": \\"GET\\",
  \\"url\\": \\"https://metals-api.com/api/latest?access_key=fake-api-key&base=USD&symbols=XAU,GBP\\",
  \\"headers\\": {
    \\"accept\\": \\"application/json\\",
    \\"cache-control\\": \\"no-cache, no-store, must-revalidate\\",
    \\"pragma\\": \\"no-cache\\",
    \\"content-type\\": \\"application/json\\",
    \\"x-api-key\\": \\"fake-api-key\\",
    \\"user-agent\\": \\"axios/0.24.0\\"
  }
}",
    "name": "AdapterError",
    "url": "https:/metals-api.com/api/latest",
  },
  "jobRunID": "1",
  "providerStatusCode": 0,
  "status": "errored",
  "statusCode": 200,
}
`;
